syntax = "proto3";

option java_package = "com.grpc";

service orderManagementService{
    rpc createOrder(OrderRequest) returns(OrderResponse);
    rpc searchOrderById(OrderRequestId) returns(OrderRequestInfo);
}

message OrderRequest{
  string ticker = 1;
  int32 quantity = 2;
  double price = 3;
  string direction = 4;
}

message OrderResponse{
    string msg = 1;
}

message OrderRequestId{
    int32 order_id = 1 ;
}

message OrderRequestInfo{
  int32  order_id = 1;
  string ticker = 2;
  int32 quantity = 3;
  double  price = 4;
  string direction = 5;
  string order_time = 6;
  string status = 7;
}


